fix: Fix rendering issue with latex contains HTML entites.
Using workarounds to solve the issue that Latex block with HTML Entities could not be rendered correctly. For more info, check out the updated part of html_entities_handling.md

Also fixed the issue that raw latex content not hidden by adding CSS style. (Issues introduced in 2.0.0)

--- a/src/style/markdown.css
+++ b/src/style/markdown.css
@@ -103,3 +103,7 @@ span>p>img {
 pre.hl-code-block {
     border-radius: 5px;
 }
+
+span.katex-html[aria-hidden] {
+    display: none;
+}
